--- a/css/variable.css
+++ b/css/variable.css
@@ -1,91 +1,89 @@
-* {
-    padding: 0;
+body {
     margin: 0;
+    padding: 0;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black; 
+}
+
+.main-container,
+.secondary-container {
+    flex: 1;
+    padding: 20px;
     box-sizing: border-box;
 }
 
-body {
-    overflow-y: scroll;
-    height: 1000px;
-}
-
-header {
-    height: 15%;
-    background-color: #fa8071;
+.sub-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    color: white;
 }
 
-.navigation {
-    display: flex;
-    justify-content: space-between;
-    background: #18bd96;
-}
-
-.navigation div {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-start;
-    list-style: none;
-    margin: 0;
-}
-
-.navigation a {
-    text-decoration: none;
-    display: block;
-    padding: 1em;
-    color: white;
-}
-
-.navigation a:hover {
-    background: #18bd96;
-}
-
-.navigation li:nth-last-child(-n+2) {
-    justify-content: flex-end;
-}
-
-.centro {
-    display: flex;
-}
-
-aside {
+.box {
+    border: 1px solid black; 
     padding: 10px;
-    background: #cccccc56;
-    width: 70vh;
+    margin-bottom: 10px;
 }
 
-main {
+.circle-container {
+    border: 1px solid black; 
     padding: 10px;
-    overflow: hidden;
+    display: flex;
+    justify-content: flex-end; 
 }
 
-h2 {
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
-
-img {
-    margin-bottom: 10px;
-    margin-top: 10px;
-    max-width: 100%;
-}
-
-main div {
-    border-bottom: 2px groove #adadad46;
-}
-
-main p {
-    padding: 4px;
-}
-
-footer {
-    height: 8%;
-    background-color: #cccccc;
+.circle {
+    width: 100px;
+    height: 100px;
+    background-color: orange;
+    border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.dropdown {
+    display: none;
+    flex-direction: column;
+}
+
+.circle:hover .dropdown {
+    display: flex;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+}
+
+.grid-item {
+    border: 1px solid black; 
+    padding: 65px;
+    text-align: center;
+}
+
+.big-box {
+    border: 1px solid black;
+    padding: 10px;
+    height: 100%;
+    box-sizing: border-box;
+}
+
+.small-box {
+    border: 1px solid black; 
+    padding: 130px;
+    height: 100%;
+    box-sizing: border-box;
+}
+
+.items-container {
+    display: flex;
+    flex-direction: column;
+}
+
+select {
+    align-self: flex-end; 
 }
